tests/spec/fail/map_keys_wrong_arity.aja
m = {"a": 1}
print(m.keys("a"))
